hphp/hack/test/typecheck/disallow_destruct/disallow_destruct_noattr.php
<?hh // strict

final class C {

  public function __destruct() {}
}
